fix: refactor Vouchers component to use Card layout for improved structure and readability

--- a/apps/web-next/src/features/panel/vouchers/components/hero/vouchers/vouchers.module.scss
+++ b/apps/web-next/src/features/panel/vouchers/components/hero/vouchers/vouchers.module.scss
@@ -1,14 +1,5 @@
 @use "@/utils" as g;
 
-.list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: start;
-  align-items: start;
-  gap: g.$padding-xsm;
-}
-
 .button {
   width: 100%;
 }
